becu.org: Placeholder text "Search" is cut off https://bugs.webkit.org/show_bug.cgi?id=209447 <rdar://problem/45951728>
Reviewed by Simon Fraser.

Source/WebCore:

'line-height: initial' ensures that that the placeholder text is visible and properly positioned when the input itself has
incompatible values. This is also what Chrome has in their UA stylesheet.

Test: fast/forms/placeholder-content-line-height.html

* css/html.css:
(input::placeholder):

LayoutTests:

* fast/forms/placeholder-content-center-expected.html:
* fast/forms/placeholder-content-center.html:
* fast/forms/placeholder-content-line-height-expected.html: Copied from LayoutTests/fast/forms/placeholder-content-center-expected.html.
* fast/forms/placeholder-content-line-height.html: Copied from LayoutTests/fast/forms/placeholder-content-center.html.


Canonical link: https://commits.webkit.org/222400@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@258906 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebCore/css/html.css
+++ b/Source/WebCore/css/html.css
@@ -702,6 +702,7 @@ input::placeholder {
     white-space: pre;
     word-wrap: normal;
     overflow: hidden;
+    line-height: initial;
 }
 
 input[type="password"] {
